# SimpleModels

./: PLAN.md  README.md  optimizer.py  pyproject.toml  ruff.toml
simplemodels/: __init__.py  analyzer.py  basic.py  config.py  conformer_generator.py  input_handler.py  main.py  optimizer.py  reporter.py  utils.py
simplemodels/processing/: __init__.py  cluster-1  smiles.py  xyz.py
tests/: config_example.yaml  test_analyzer.py  test_optimizer.py  test_optimizer_charge_spin.py  test_pipeline_integration.py  test_reporter.py
tests/test_files/: smiles.txt  test1.xyz  test2.xyz  test3.xyz
